--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -1,12 +1,26 @@
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:showIn="navigation_view"
+    android:id="@+id/buttom_navigation">
     <item
         android:id="@+id/nav_home"
         android:enabled="true"
         android:icon="@drawable/ic_home_24"
-        android:title="Home"/>
+        android:title="Adaption"/>
     <item
         android:id="@+id/page_2"
         android:enabled="true"
         android:icon="@drawable/ic_account_24"
         android:title="Account"/>
+    <item
+        android:id="@+id/request"
+        android:enabled="true"
+        android:icon="@drawable/request"
+        android:title="Request"/>
+    <item
+        android:id="@+id/my_peyts"
+        android:enabled="true"
+        android:icon="@drawable/paws"
+        android:title="My Pets"/>
 </menu>
