--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -10,9 +10,9 @@
     tools:context=".StartActivity">
 
     <ImageView
-        android:layout_width="221dp"
-        android:layout_height="120dp"
-        android:src="@drawable/logo"
+        android:layout_width="230dp"
+        android:layout_height="203dp"
+        android:src="@drawable/logo1"
         android:layout_gravity="center"
         android:layout_marginTop="150dp"/>
 
