--- a/app/src/main/res/layout/fragment_my_pets.xml
+++ b/app/src/main/res/layout/fragment_my_pets.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
     <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
         android:background="@drawable/background"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:padding="10dp"
-        android:paddingBottom="40dp"
-    android:id="@+id/fragment_adoption">
+
+        android:paddingBottom="40dp">
+
 
         <ListView
             android:id="@+id/list"
