--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -10,14 +10,14 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/background"
+        android:background="@drawable/backgroundpet3"
         android:orientation="vertical"
         tools:context=".RegisterActivity">
 
         <ImageView
-            android:layout_width="121dp"
-            android:layout_height="81dp"
-            android:layout_marginTop="20dp"
+            android:layout_width="200dp"
+            android:layout_height="152dp"
+            android:layout_marginTop="60dp"
             android:layout_gravity="center"
             android:src="@drawable/logo1"/>
         <TextView
@@ -85,7 +85,7 @@
             android:layout_height="60dp"
             android:layout_gravity="center"
             android:layout_marginTop="20dp"
-            android:background="@drawable/button"
+            android:background="@drawable/button2"
             android:fontFamily="@font/montserrat"
             android:text="Create account"
             android:textAllCaps="false"
@@ -113,7 +113,7 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/montserrat"
                 android:text="SignIn"
-                android:textColor="@color/button_color"
+                android:textColor="@color/black"
                 android:textStyle="bold"
                 android:textSize="14sp"/>
 
