--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -57,7 +57,7 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
-    <Imageview
+    <ImageView
         android:id="@+id/settings_profile_img"
         android:layout_width="130dp"
         android:layout_height="130dp"
@@ -86,7 +86,7 @@
         android:textStyle="bold" />
 
     <EditText
-        android:id="@+id/settings_phone_number"
+        android:id="@+id/user_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/profile_img_change_btn"
@@ -95,27 +95,41 @@
         android:layout_marginEnd="15dp"
         android:layout_marginBottom="15dp"
         android:background="@drawable/input_forme"
-        android:hint="Phone Number..."
+        android:hint="First Name"
         android:padding="10dp"
         android:textColorHint="@android:color/black" />
 
-
-    />
-
     <EditText
-        android:id="@+id/settings_full_name"
+        android:id="@+id/user_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/settings_phone_number"
+        android:layout_below="@id/profile_img_change_btn"
         android:layout_marginStart="15dp"
         android:layout_marginTop="15dp"
         android:layout_marginEnd="15dp"
         android:layout_marginBottom="15dp"
         android:background="@drawable/input_forme"
-
-        android:hint="Full Name..."
+        android:hint="First Name"
         android:padding="10dp"
         android:textColorHint="@android:color/black" />
+    <EditText
+        android:id="@+id/settings_phone_number"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/user_name"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginBottom="15dp"
+        android:background="@drawable/input_forme"
+        android:hint="Phone Number"
+        android:padding="10dp"
+        android:inputType="number"
+        android:textColorHint="@android:color/black" />
+
+
+    />
+
 
     <EditText
         android:id="@+id/settings_address"
