--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -22,7 +22,7 @@
         android:layout_height="60dp"
         android:layout_gravity="center"
         android:layout_marginTop="60dp"
-        android:background="@drawable/button"
+        android:background="@drawable/button3"
         android:fontFamily="@font/montserrat"
         android:text="SignIn"
         android:textAllCaps="false"
