--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -39,9 +39,8 @@
                     android:textSize="17sp"
 
                     android:textStyle="bold" />
-<!--
                 <TextView
-                    android:id="@+id/update_settings_btn"
+                    android:id="@+id/delete_user_btn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
@@ -49,11 +48,11 @@
                     android:layout_marginEnd="10dp"
                     android:layout_marginRight="10dp"
                     android:fontFamily="@font/montserrat"
-                    android:text="Update"
-                    android:textColor="@android:color/black"
+                    android:text="Delete Account"
+                    android:textColor="@android:color/holo_red_dark"
                     android:textSize="17sp"
                     android:textStyle="bold" />
--->
+
 
             </RelativeLayout>
 
